libtorch-ffi/csrc/hasktorch_finializer.h

  void delete_tensor(at::Tensor* tensor);
  void delete_tensorlist(std::vector<at::Tensor>* tensors);
  void delete_tensorindex(at::indexing::TensorIndex* idx);
  void delete_tensorindexlist(std::vector<at::indexing::TensorIndex>* idxs);
  void delete_stdvectordouble(std::vector<double>* object);
  void delete_stdvectorint(std::vector<int64_t>* object);
  void delete_stdvectorbool(std::vector<bool>* object);
  void delete_tensoroptions(at::TensorOptions* object);
  void delete_tensortensor(std::tuple<at::Tensor,at::Tensor>* ptr);
  void delete_tensortensortensortensortensor(std::tuple<at::Tensor,at::Tensor,at::Tensor,at::Tensor,at::Tensor>* ptr);
  void delete_tensortensortensortensorlist(std::tuple<at::Tensor,at::Tensor,at::Tensor,std::vector<at::Tensor>>* ptr);
  void delete_tensortensortensortensorint64(std::tuple<at::Tensor,at::Tensor,at::Tensor,at::Tensor,int64_t>* ptr);
  void delete_tensortensortensor(std::tuple<at::Tensor,at::Tensor,at::Tensor>* ptr);
  void delete_tensortensortensortensor(std::tuple<at::Tensor,at::Tensor,at::Tensor,at::Tensor>* ptr);
  void delete_tensortensorcdoubleint64(std::tuple<at::Tensor,at::Tensor,double,int64_t>* ptr);
  void delete_cdoubleint64(std::tuple<double,int64_t>* ptr);
  void delete_cdoublecdouble(std::tuple<double,double>* ptr);
  void delete_tensorgenerator(std::tuple<at::Tensor,at::Generator>* ptr);
  void delete_optimizer(torch::optim::Optimizer* ptr);
  void delete_stream(c10::Stream* ptr);
  void delete_arrayrefscalar(at::ArrayRef<at::Scalar>* ptr);
  void delete_vectorscalar(std::vector<at::Scalar>* ptr);