libtorch-ffi/src/Torch/Internal/Objects.hs


instance CppObject Symbol where
  fromPtr ptr = newForeignPtr c_delete_symbol ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_symbol' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensor"
  c_delete_tensor  :: FunPtr( Ptr Tensor -> IO () )

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensor"
  c_delete_tensor' :: Ptr Tensor -> IO () 

instance CppObject Tensor where
  fromPtr ptr = newForeignPtr c_delete_tensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensor' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensorindex"
  c_delete_tensorindex :: FunPtr ( Ptr TensorIndex -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensorindex"
  c_delete_tensorindex' ::  Ptr TensorIndex -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensorindexlist"
  c_delete_tensorindexlist :: FunPtr ( Ptr (StdVector TensorIndex) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensorindexlist"
  c_delete_tensorindexlist' ::  Ptr (StdVector TensorIndex) -> IO ()

instance CppObject TensorIndex where
  fromPtr ptr = newForeignPtr c_delete_tensorindex ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensorindex' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (StdVector TensorIndex) where
  fromPtr ptr = newForeignPtr c_delete_tensorindexlist ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensorindexlist' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensorlist"
  c_delete_tensorlist :: FunPtr ( Ptr TensorList -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensorlist"
  c_delete_tensorlist' ::  Ptr TensorList -> IO ()

instance CppObject TensorList where
  fromPtr ptr = newForeignPtr c_delete_tensorlist ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensorlist' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensoroptions"
  c_delete_tensoroptions :: FunPtr ( Ptr TensorOptions -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensoroptions"
  c_delete_tensoroptions' ::  Ptr TensorOptions -> IO ()

instance CppObject TensorOptions where
  fromPtr ptr = newForeignPtr c_delete_tensoroptions ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensoroptions' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensor"
  c_delete_tensortensor :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensor"
  c_delete_tensortensor' ::  Ptr (StdTuple '(Tensor,Tensor)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensor' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensortensortensortensor"
  c_delete_tensortensortensortensortensor :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor,Tensor,Tensor,Tensor)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensortensortensortensor"
  c_delete_tensortensortensortensortensor' ::  Ptr (StdTuple '(Tensor,Tensor,Tensor,Tensor,Tensor)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor,Tensor,Tensor,Tensor)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensortensortensortensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensortensortensortensor' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensortensortensorlist"
  c_delete_tensortensortensortensorlist :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor,Tensor,TensorList)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensortensortensorlist"
  c_delete_tensortensortensortensorlist' ::  Ptr (StdTuple '(Tensor,Tensor,Tensor,TensorList)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor,Tensor,TensorList)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensortensortensorlist ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensortensortensorlist' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensortensortensorint64"
  c_delete_tensortensortensortensorint64 :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor,Tensor,Tensor,Int64)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensortensortensorint64"
  c_delete_tensortensortensortensorint64' ::  Ptr (StdTuple '(Tensor,Tensor,Tensor,Tensor,Int64)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor,Tensor,Tensor,Int64)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensortensortensorint64 ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensortensortensorint64' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensortensor"
  c_delete_tensortensortensor :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor,Tensor)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensortensor"
  c_delete_tensortensortensor' ::  Ptr (StdTuple '(Tensor,Tensor,Tensor)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor,Tensor)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensortensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensortensor' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensortensortensor"
  c_delete_tensortensortensortensor :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor,Tensor,Tensor)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensortensortensor"
  c_delete_tensortensortensortensor' ::  Ptr (StdTuple '(Tensor,Tensor,Tensor,Tensor)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor,Tensor,Tensor)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensortensortensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensortensortensor' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_cdoubleint64"
  c_delete_cdoubleint64 :: FunPtr ( Ptr (StdTuple '(CDouble,Int64)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_cdoubleint64"
  c_delete_cdoubleint64' ::  Ptr (StdTuple '(CDouble,Int64)) -> IO ()

instance CppObject (StdTuple '(CDouble,Int64)) where
  fromPtr ptr = newForeignPtr c_delete_cdoubleint64 ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_cdoubleint64' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_cdoublecdouble"
  c_delete_cdoublecdouble :: FunPtr ( Ptr (StdTuple '(CDouble,CDouble)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_cdoublecdouble"
  c_delete_cdoublecdouble' ::  Ptr (StdTuple '(CDouble,CDouble)) -> IO ()

instance CppObject (StdTuple '(CDouble,CDouble)) where
  fromPtr ptr = newForeignPtr c_delete_cdoublecdouble ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_cdoublecdouble' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensorgenerator"
  c_delete_tensorgenerator :: FunPtr ( Ptr (StdTuple '(Tensor,Generator)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensorgenerator"
  c_delete_tensorgenerator' ::  Ptr (StdTuple '(Tensor,Generator)) -> IO ()

instance CppObject (StdTuple '(Tensor,Generator)) where
  fromPtr ptr = newForeignPtr c_delete_tensorgenerator ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensorgenerator' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_tensortensorcdoubleint64"
  c_delete_tensortensorcdoubleint64 :: FunPtr ( Ptr (StdTuple '(Tensor,Tensor,CDouble,Int64)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_tensortensorcdoubleint64"
  c_delete_tensortensorcdoubleint64' ::  Ptr (StdTuple '(Tensor,Tensor,CDouble,Int64)) -> IO ()

instance CppObject (StdTuple '(Tensor,Tensor,CDouble,Int64)) where
  fromPtr ptr = newForeignPtr c_delete_tensortensorcdoubleint64 ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_tensortensorcdoubleint64' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_optimizer"
  c_delete_optimizer  :: FunPtr( Ptr Optimizer -> IO () )

foreign import ccall unsafe "hasktorch_finalizer.h delete_optimizer"
  c_delete_optimizer' :: Ptr Optimizer -> IO () 

instance CppObject Optimizer where
  fromPtr ptr = newForeignPtr c_delete_optimizer ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_optimizer' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdvectordouble"
  c_delete_stdvectordouble :: FunPtr ( Ptr (StdVector CDouble) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdvectordouble"
  c_delete_stdvectordouble' ::  Ptr (StdVector CDouble) -> IO ()

instance CppObject (StdVector CDouble) where
  fromPtr ptr = newForeignPtr c_delete_stdvectordouble ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdvectordouble' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdvectorint"
  c_delete_stdvectorint :: FunPtr ( Ptr (StdVector CInt) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdvectorint"
  c_delete_stdvectorint' ::  Ptr (StdVector CInt) -> IO ()

instance CppObject (StdVector CInt) where
  fromPtr ptr = newForeignPtr c_delete_stdvectorint ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdvectorint' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdvectorbool"
  c_delete_stdvectorbool :: FunPtr ( Ptr (StdVector CBool) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdvectorbool"
  c_delete_stdvectorbool' ::  Ptr (StdVector CBool) -> IO ()

instance CppObject (StdVector CBool) where
  fromPtr ptr = newForeignPtr c_delete_stdvectorbool ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdvectorbool' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stream"
  c_delete_stream :: FunPtr ( Ptr Stream -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stream"
  c_delete_stream' ::  Ptr Stream -> IO ()

instance CppObject Stream where
  fromPtr ptr = newForeignPtr c_delete_stream ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stream' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_arrayrefscalar"
  c_delete_arrayrefscalar :: FunPtr ( Ptr (ArrayRef Scalar) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_arrayrefscalar"
  c_delete_arrayrefscalar' ::  Ptr (ArrayRef Scalar) -> IO ()

instance CppObject (ArrayRef Scalar) where
  fromPtr ptr = newForeignPtr c_delete_arrayrefscalar ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_arrayrefscalar' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_vectorscalar"
  c_delete_vectorscalar :: FunPtr ( Ptr (StdVector Scalar) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_vectorscalar"
  c_delete_vectorscalar' ::  Ptr (StdVector Scalar) -> IO ()

instance CppObject (StdVector Scalar) where
  fromPtr ptr = newForeignPtr c_delete_vectorscalar ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_vectorscalar' ptr
  {-# INLINE [1] deletePtr #-}
